fix footer, roll-over logo, wrap text image, flickr bigger, ...

--- a/css/site.css
+++ b/css/site.css
@@ -6,6 +6,7 @@ body{
 	padding:0px;
 	text-align:left;	
 	color:#444444;
+	overflow-y: scroll;
 	background-color:#D8CAB8;
 	margin:0px;
 	font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;	
@@ -15,7 +16,7 @@ body{
 #content {
 	width:750px;
 	margin:0px auto; 
-	text-align:left; 
+	text-align:justify; 
 	padding:15px;
 	}
 
@@ -26,7 +27,14 @@ body{
     margin-right: auto;
     margin-top:10px;
     margin-bottom:10px;
+    background-image:url(../img/logosprite.png);
+    background-size:200px,159px;
+    background-position:0px 0px;
+    width:200px;
+    height:155px;
 }
+
+.banner:hover{background-position:0px -159px;}
 
 /*this is the container class for the nav bar*/
 .header{
@@ -79,6 +87,13 @@ p{margin:10px;}
 a{color:#5C832F;text-decoration: none;}
 a:hover{color:#284907;}
 
+/*this is the index photo of sarah and dan*/
+img.rightWrap{
+  border-style: none;
+  padding:10px;
+  float:right;
+}
+
 ul{  
 	list-style-type: none;
 	padding-left: 10px;
@@ -88,6 +103,7 @@ li{
 	padding-left: 12px ;
 	text-indent: -12px ;
 }
+
 
 /*This is stuff for the recipe navigation*/
 .container {
@@ -136,14 +152,13 @@ li{
 
 /*footer*/
 .foot {
-	position:absolute;
-	bottom:0;
 	width:100%;
 	height:30px;
 	clear:both;
 	text-align:center;
     font-size: 14px;
-    color:#666666;}
+    color:#666666;
+}
 
 .jqcNode { }
 
@@ -162,12 +177,5 @@ li{
 .flickr{
 	margin-top: 20px;
 	text-align:center;
-}
-
-/*this is the index photo of sarah and dan*/
-
-img.alpha{
-  border-style: none;
-  padding-right:15px;
-  float:right;
+	padding-bottom:20px;
 }
